--- a/public/components/navbar.html
+++ b/public/components/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default zero-margin" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JogaBonito Viz</a>
+      <a class="navbar-brand" href="index.html">JogaBonito Viz</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
