--- a/public/components/jumbotron.html
+++ b/public/components/jumbotron.html
@@ -1,11 +1,12 @@
 <div class="jumbotron">
       <div class="container">
-        <h1>Play Beautiful</h1>
-        <p></p>
+        <h1>It is enjoyable to make things visible which are invisible
+		</h1>
+		<p>Eric Cantona</p>
+        <p>See football differently...</p>
         <div class="btn-group btn-group-lg">
+		  <a href="league.html"><button type="button" class="btn btn-default">League Data</button></a>
 		  <a href="club.html"><button type="button" class="btn btn-default">Club Data</button></a>
-		  <a href="league.html"><button type="button" class="btn btn-default">Historical League Data</button></a>
-		</div>
-
+</div>
       </div>
     </div>
